--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "test:watch": "vitest",
     "test:coverage": "vitest run --coverage",
     "build": "tsup src/index.ts --format esm --dts --clean",
+    "gen:colors": "tsx scripts/gen-named-colors.ts",
     "release": "x-release"
   },
   "license": "MIT",
@@ -28,6 +29,7 @@
     "@types/node": "^18.8.2",
     "@vitest/coverage-c8": "^0.23.4",
     "tsup": "^6.2.3",
+    "tsx": "^3.9.0",
     "typescript": "^4.8.4",
     "vitest": "^0.23.4",
     "vitest-github-actions-reporter": "^0.8.3"
