--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@0x-jerry/x-release": "^0.3.6",
     "@types/node": "^18.8.2",
     "@vitest/coverage-c8": "^0.24.0",
+    "happy-dom": "^8.9.0",
     "tsup": "^6.2.3",
     "tsx": "^3.9.0",
     "typescript": "^4.8.4",
