--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "node": ">= 14"
   },
   "scripts": {
+    "dev": "pnpm --filter docs run dev",
     "test": "vitest run",
     "test:watch": "vitest",
     "test:coverage": "vitest run --coverage",
@@ -26,17 +27,16 @@
   ],
   "devDependencies": {
     "@0x-jerry/x-release": "^0.3.6",
-    "@types/node": "^18.8.2",
-    "@vitest/coverage-c8": "^0.24.0",
+    "@types/node": "^18.14.6",
+    "@vitest/coverage-c8": "^0.29.2",
     "happy-dom": "^8.9.0",
-    "tsup": "^6.2.3",
-    "tsx": "^3.9.0",
-    "typescript": "^4.8.4",
-    "vitest": "^0.24.0",
-    "vitest-github-actions-reporter": "^0.8.3"
+    "tsup": "^6.6.3",
+    "tsx": "^3.12.3",
+    "vitest": "^0.29.2"
   },
   "dependencies": {
-    "@0x-jerry/utils": "^1.11.0"
+    "@0x-jerry/utils": "^1.14.0",
+    "magic-regexp": "^0.6.3"
   },
   "repository": {
     "type": "git",
