--- a/docs/package.json
+++ b/docs/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc --noEmit && vite build",
+    "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -18,7 +18,6 @@
     "less": "^4.1.3",
     "typescript": "^4.6.4",
     "unocss": "^0.45.30",
-    "vite": "^3.1.0",
-    "vue-tsc": "^1.0.0"
+    "vite": "^3.1.0"
   }
 }
